--- a/src/app/card-payment/card-payment.component.html
+++ b/src/app/card-payment/card-payment.component.html
@@ -208,7 +208,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-6 offset-6">
                 <button
                   class="btn btn-info btn-block"
                   (click)="completePayment()"
