--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,11 +12,8 @@
           </div>
           <div class="card-body">
             <div class="row">
-              <div
-                class="col-12"
-                *ngFor="let card of availableCardsFromTheStore$ | async"
-              >
-                <div class="card">
+              <div class="col-12" *ngFor="let card of availableCardsPayment">
+                <div class="card mb-3">
                   <div class="card-body">
                     <p>
                       Amount:
@@ -39,11 +36,9 @@
                     </p>
                     <p>
                       Expiration Date:
-                      <span class="font-weight-bold text-secondary"
-                        >{{ card.expirationDate.getMonth() + 1 }}/{{
-                          card.expirationDate.getFullYear()
-                        }}</span
-                      >
+                      <span class="font-weight-bold text-secondary">{{
+                        card.expirationDate | date: "MM/yyyy"
+                      }}</span>
                     </p>
                     <p>
                       Security Number:
