fix: final clean ups done

--- a/src/app/card-payment/card-payment.component.html
+++ b/src/app/card-payment/card-payment.component.html
@@ -97,6 +97,20 @@
                       digitsValueValidator('creditCardNumber') &&
                       newPaymentForm
                         .get('creditCardNumber')
+                        .hasError('minlength')
+                    "
+                  >
+                    Minimum of 16 characters allowed!
+                  </div>
+                  <div
+                    class="invalid-feedback"
+                    *ngIf="
+                      !newPaymentForm
+                        .get('creditCardNumber')
+                        .hasError('required') &&
+                      digitsValueValidator('creditCardNumber') &&
+                      newPaymentForm
+                        .get('creditCardNumber')
                         .hasError('maxlength')
                     "
                   >
